plang/testing/logs/false-incorrect/82/program82.p.p.out
Error at i WeT (Bi) :- (zce4).:17:13 error: 
i WeT (Bi) :- (zce4).
            ^
Error at i WeT (Bi) :- (zce4).:17:19 error: 
i WeT (Bi) :- (zce4).
                  ^