plang/testing/logs/false-incorrect/82/program82.p.p
o (OBKWh) (nbFS (eSjv3 Yjnf n) o4rV (b A (o jh aXn (sjL)) (ji7U N K9ea (bsu (quNHH N7 (HPj3)) fF (F))))) rE Mjyp.


a (t778s (jO (kDu0O (hGh (du GU) (BgK) (p) pVBe) grT1E r8) (lA YiF (qd) (Y5FOX) gl8W) gbP8o (pUN (TO) XO (kNPE (Ov5x) md (DyNP)))) K (T0)).

jjC.
qrqse J.

i xQB (s9y) y.
nX (gpcGk (VkQ)) (hN (O) (Lw6I6) I2dz ddL1f) (p2M DIq (pVADi (LC2wa) ub) cr (mLL dHU)) F8KiB :- l (tOR DbTQ ct) (yv (I) GKew (v4a7 (saQZQ (tOtJ (hk (Ky) (LZ) (Rkre)) (bjN) ZoPQI (ys (fK) (iqon HIrD Ok (TkwR) (NklnZ))))) K (WD6) vH) (P1DXH)) (mZoH) YFCX0; ww (R) JLamf, (w), (p8znZ (r (EO) (x5 zvJ5g (NkJ)) y8 (Kuz)) J6Z (hPVS), kQ); o7RP NA zYv (UVUn); hO9 nVK; kSnig (y (ad) nSJ YgAE) (op NSsT) rvMi yN.
zub c6Y (EBFsx) xgd a :- jaqGj (Jj) SAbsK, cY3r (W) (uPh (FI0)) (rQVMQ), (pTEO; npD (U)); (mNSFX (rZF5x (c L (H) (jwd0 kt2E7 (PI)) (UfS4))); vf5 M7 AS0k U).

kgBy (hqupX) i3 (OR).
m.

o :- wa (Q7iTW) n; (hovUf txbm7), s1lq2 nkD; pQ (Lq) Njt; uiW Bzu (bFzQk (Lm2Pw)); zfD Mh Sw.
i WeT (Bi) :- (zce4).

? i hetli (bP (l vx27 BzkiX WmhYx) d sa) (kHb (Hi) o1W (K)).

